test/arrays/diten/array-as-vec-bounds-checking.0-6.good
array-as-vec-bounds-checking.chpl:30: error: halt reached - remove at position 8 out of bounds
